--- a/Server/package.json
+++ b/Server/package.json
@@ -4,11 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "JesBrian",
   "license": "ISC",
   "dependencies": {
-    "koa": "^2.6.2"
+    "glob": "^7.1.3",
+    "koa": "^2.6.2",
+    "koa-compose": "^4.1.0",
+    "koa-router": "^7.4.0"
   }
 }
