--- a/Server/package.json
+++ b/Server/package.json
@@ -13,6 +13,17 @@
     "glob": "^7.1.3",
     "koa": "^2.6.2",
     "koa-compose": "^4.1.0",
-    "koa-router": "^7.4.0"
+    "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.2.0",
+    "@babel/preset-env": "^7.2.0",
+    "babel-loader": "^8.0.0-beta.0",
+    "babel-preset-es2015": "^6.24.1",
+    "webpack": "^4.27.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-middleware": "^3.4.0",
+    "webpack-hot-middleware": "^2.24.3"
   }
 }
