--- a/Server/package.json
+++ b/Server/package.json
@@ -21,6 +21,9 @@
     "@babel/preset-env": "^7.2.0",
     "babel-loader": "^8.0.0-beta.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2016": "^6.24.1",
+    "babel-preset-es2017": "^6.24.1",
+    "babel-preset-es2018": "^1.0.0",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "^3.4.0",
