--- a/Web/package.json
+++ b/Web/package.json
@@ -15,6 +15,7 @@
     "qs": "^6.6.0",
     "register-service-worker": "^1.5.2",
     "vue": "^2.5.17",
+    "vue-draggable-resizable": "^1.7.5",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
