--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "inline cv web system",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server-dev": "node server-src/index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,15 @@
   "bugs": {
     "url": "https://github.com/JesBrian/Curriculum-Vitae-Inline/issues"
   },
-  "homepage": "https://github.com/JesBrian/Curriculum-Vitae-Inline#readme"
+  "homepage": "https://github.com/JesBrian/Curriculum-Vitae-Inline#readme",
+  "devDependencies": {
+    "webpack": "^4.27.1",
+    "webpack-cli": "^3.1.2"
+  },
+  "dependencies": {
+    "glob": "^7.1.3",
+    "koa": "^2.6.2",
+    "koa-compose": "^4.1.0",
+    "koa-router": "^7.4.0"
+  }
 }
