--- a/Backstage/package.json
+++ b/Backstage/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "iview-admin",
-  "version": "2.0.0",
-  "author": "Lison<lison.modern@gmail.com>",
+  "name": "curriculum-vitae-admin",
+  "version": "1.0.0",
+  "author": "JesBrian<JesBrian666@gmail.com>",
   "private": false,
   "scripts": {
     "dev": "vue-cli-service serve --open",
