--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "inline cv web system",
   "main": "index.js",
   "scripts": {
-    "server-dev": "node server-src/index.js"
+    "server-dev": "node server-src/index.js",
+    "ts-server-dev": "tsc && node server-src/dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -20,29 +21,34 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "css-loader": "^0.28.11",
-    "style-loader": "^0.21.0",
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.9.0",
+    "nodemon": "^1.18.9",
+    "sass-loader": "^7.0.1",
+    "style-loader": "^0.21.0",
+    "ts-node": "^7.0.1",
+    "typescript": "^3.2.2",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.4",
     "webpack-merge": "^4.1.3",
-    "node-sass": "^4.9.0",
-    "sass-loader": "^7.0.1"
+    "@types/node": "^10.12.18"
   },
   "dependencies": {
+    "@types/es6-promise": "^3.3.0",
     "axios": "^0.18.0",
+    "glob": "^7.1.3",
     "iview": "^3.1.5",
+    "koa": "^2.6.2",
+    "koa-compose": "^4.1.0",
+    "koa-router": "^7.4.0",
     "qs": "^6.6.0",
     "register-service-worker": "^1.5.2",
     "vue": "^2.5.17",
-    "vue-loader": "^15.2.4",
-    "vue-template-compiler": "^2.5.16",
     "vue-draggable-resizable": "^1.7.5",
+    "vue-loader": "^15.2.4",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1",
-    "glob": "^7.1.3",
-    "koa": "^2.6.2",
-    "koa-compose": "^4.1.0",
-    "koa-router": "^7.4.0"
+    "vue-template-compiler": "^2.5.16",
+    "vuex": "^3.0.1"
   }
 }
