--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "inline cv web system",
   "main": "index.js",
   "scripts": {
-    "server-dev": "node server-src/index.js",
-    "ts-server-dev": "tsc -p server-src && node server-src/dist/index.js"
+    "server-dev": "tsc -p server && node server/dist/index.js",
+    "server-dev-watch": "nodemon --watch 'server/**/*' -e ts,tsx --exec 'npm run server-dev'",
+    "server-build": "tsc -p server"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   },
   "homepage": "https://github.com/JesBrian/Curriculum-Vitae-Inline#readme",
   "devDependencies": {
+    "@types/node": "^10.12.18",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "css-loader": "^0.28.11",
@@ -28,17 +30,16 @@
     "style-loader": "^0.21.0",
     "ts-node": "^7.0.1",
     "typescript": "^3.2.2",
-    "webpack": "^4.27.1",
+    "webpack": "^4.28.1",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.4",
-    "webpack-merge": "^4.1.3",
-    "@types/node": "^10.12.18"
+    "webpack-dev-server": "^3.1.11",
+    "webpack-merge": "^4.1.3"
   },
   "dependencies": {
     "@types/es6-promise": "^3.3.0",
     "axios": "^0.18.0",
     "glob": "^7.1.3",
-    "iview": "^3.1.5",
+    "iview": "^3.2.0",
     "koa": "^2.6.2",
     "koa-compose": "^4.1.0",
     "koa-router": "^7.4.0",
