--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "inline cv web system",
   "main": "index.js",
   "scripts": {
+    "web-dev": "webpack-dev-server --hot --config ./web/config/webpack.dev.config.js",
     "server-dev": "tsc -p server && node server/dist/index.js",
     "server-dev-watch": "nodemon --watch 'server/**/*' -e ts,tsx --exec 'npm run server-dev'",
     "server-build": "tsc -p server"
@@ -30,6 +31,8 @@
     "style-loader": "^0.21.0",
     "ts-node": "^7.0.1",
     "typescript": "^3.2.2",
+    "vue-loader": "^15.4.2",
+    "vue-template-compiler": "^2.5.21",
     "webpack": "^4.28.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.11",
@@ -45,11 +48,9 @@
     "koa-router": "^7.4.0",
     "qs": "^6.6.0",
     "register-service-worker": "^1.5.2",
-    "vue": "^2.5.17",
+    "vue": "^2.5.21",
     "vue-draggable-resizable": "^1.7.5",
-    "vue-loader": "^15.2.4",
     "vue-router": "^3.0.1",
-    "vue-template-compiler": "^2.5.16",
     "vuex": "^3.0.1"
   }
 }
