--- a/package.json
+++ b/package.json
@@ -26,15 +26,19 @@
     "babel-loader": "^7.1.5",
     "babel-preset-latest": "^6.24.1",
     "css-loader": "^0.28.11",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.11.0",
     "nodemon": "^1.18.9",
-    "sass-loader": "^7.0.1",
+    "sass": "^1.15.2",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
     "ts-node": "^7.0.1",
     "typescript": "^3.2.2",
     "url-loader": "^1.1.2",
+    "vue": "^2.5.21",
     "vue-loader": "^15.4.2",
+    "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.5.21",
     "webpack": "^4.28.1",
     "webpack-cli": "^3.1.2",
@@ -51,7 +55,6 @@
     "koa-router": "^7.4.0",
     "qs": "^6.6.0",
     "register-service-worker": "^1.5.2",
-    "vue": "^2.5.21",
     "vue-draggable-resizable": "^1.7.5",
     "vue-router": "^3.0.2",
     "vuex": "^3.0.1"
