--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-loader": "^7.1.5",
     "babel-preset-latest": "^6.24.1",
     "css-loader": "^0.28.11",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.11.0",
