--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-latest": "^6.24.1",
+    "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^3.0.1",
@@ -50,7 +51,9 @@
     "vue-template-compiler": "^2.5.21",
     "webpack": "^4.28.2",
     "webpack-cli": "^3.1.2",
+    "webpack-dashboard": "^2.0.0",
     "webpack-dev-server": "^3.1.11",
+    "webpack-jarvis": "^0.3.2",
     "webpack-merge": "^4.1.3"
   },
   "dependencies": {
