--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
   },
   "homepage": "https://github.com/JesBrian/Curriculum-Vitae-Inline#readme",
   "devDependencies": {
+    "@babel/core": "^7.2.2",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/preset-env": "^7.2.3",
     "@types/node": "^10.12.18",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
+    "babel-loader": "^8.0.4",
     "babel-preset-latest": "^6.24.1",
     "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^0.28.11",
