--- a/package.json
+++ b/package.json
@@ -31,12 +31,12 @@
     "babel-preset-latest": "^6.24.1",
     "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^0.28.11",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.9.0",
     "less-loader": "^4.0.5",
     "lint-staged": "^6.0.0",
+    "mini-css-extract-plugin": "^0.5.0",
     "mockjs": "^1.0.1-beta3",
     "node-sass": "^4.11.0",
     "nodemon": "^1.18.9",
