--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "mockjs": "^1.0.1-beta3",
     "node-sass": "^4.11.0",
     "nodemon": "^1.18.9",
+    "purify-css": "^1.2.5",
+    "purifycss-webpack": "^0.7.0",
     "sass": "^1.15.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
