--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web-build": "webpack --config ./web/config/webpack.prod.js",
     "cms-dev": "webpack-dev-server --hot --config ./cms/config/webpack.dev.js",
     "cms-build": "webpack --config ./cms/config/webpack.prod.js",
+    "mp-dev": "",
     "server-dev": "tsc -p server && node server/dist/index.js",
     "server-dev-watch": "nodemon --watch 'server/**/*' -e ts,tsx --exec 'npm run server-dev'",
     "server-build": "tsc -p server"
