--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-preset-latest": "^6.24.1",
     "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^0.28.11",
+    "drop-console-webpack-plugin": "^4.0.2",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.9.0",
