--- a/package.json
+++ b/package.json
@@ -77,6 +77,8 @@
     "koa": "^2.6.2",
     "koa-compose": "^4.1.0",
     "koa-router": "^7.4.0",
+    "mongodb": "^3.1.10",
+    "mongoose": "^5.4.2",
     "qs": "^6.6.0",
     "register-service-worker": "^1.5.2",
     "simplemde": "^1.11.2",
