--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "description": "inline cv web system",
   "main": "index.js",
   "scripts": {
-    "web-dev": "webpack-dev-server --hot --config ./web/config/webpack.dev.js",
-    "web-build": "webpack --config ./web/config/webpack.prod.js",
-    "cms-dev": "webpack-dev-server --hot --config ./cms/config/webpack.dev.js",
-    "cms-build": "webpack --config ./cms/config/webpack.prod.js",
-    "server-dev": "tsc -p server && node server/dist/index.js",
+    "web-dev": "webpack-dev-server --hot --config web/config/webpack.dev.js",
+    "web-build": "webpack --config web/config/webpack.prod.js",
+    "cms-dev": "webpack-dev-server --hot --config cms/config/webpack.dev.js",
+    "cms-build": "webpack --config cms/config/webpack.prod.js",
+    "server-dev": "npm run server-build && node server/dist/index.js",
     "server-dev-watch": "nodemon --watch 'server/**/*' -e ts,tsx --exec 'npm run server-dev'",
     "server-build": "tsc -p server"
   },
