package - [ import some plugins ]

--- a/package.json
+++ b/package.json
@@ -79,6 +79,10 @@
     "koa": "^2.6.2",
     "koa-compose": "^4.1.0",
     "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0",
+    "koa2-connect-history-api-fallback": "^0.1.1",
+    "koa2-cors": "^2.0.6",
+    "koa2-history-api-fallback": "0.0.5",
     "mongodb": "^3.1.10",
     "mongoose": "^5.4.2",
     "qs": "^6.6.0",
@@ -88,6 +92,7 @@
     "vue-draggable-resizable": "^1.7.5",
     "vue-i18n": "^7.8.0",
     "vue-router": "^3.0.2",
+    "vue-server-renderer": "^2.5.21",
     "vuedraggable": "^2.16.0",
     "vuex": "^3.0.1",
     "wangeditor": "^3.1.1",
