--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "koa2-connect-history-api-fallback": "^0.1.1",
     "koa2-cors": "^2.0.6",
     "koa2-history-api-fallback": "0.0.5",
+    "localforage": "^1.7.3",
     "mongodb": "^3.1.10",
     "mongoose": "^5.4.2",
     "qs": "^6.6.0",
