--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "koa": "^2.6.2",
     "koa-compose": "^4.1.0",
     "koa-router": "^7.4.0",
+    "koa-session2": "^2.2.8",
     "koa-static": "^5.0.0",
     "koa2-connect-history-api-fallback": "^0.1.1",
     "koa2-cors": "^2.0.6",
