--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "localforage": "^1.7.3",
     "mongodb": "^3.1.10",
     "mongoose": "^5.4.2",
+    "pomelo-logger": "^0.1.7",
     "qs": "^6.6.0",
     "register-service-worker": "^1.5.2",
     "simplemde": "^1.11.2",
@@ -96,6 +97,7 @@
     "vue-i18n": "^7.8.0",
     "vue-router": "^3.0.2",
     "vue-server-renderer": "^2.5.21",
+    "vue-skeleton-webpack-plugin": "^1.2.2",
     "vuedraggable": "^2.16.0",
     "vuex": "^3.0.1",
     "wangeditor": "^3.1.1",
