--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -13,7 +13,13 @@
         "../types/*"
       ]
     },
-    "lib": ["es2017"]
+    "lib": [
+      "es2015",
+      "es2017",
+      "es2015.promise"
+    ],
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true
   },
   "include": [
     "./**/*"
