--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -22,6 +22,8 @@
     "experimentalDecorators": true
   },
   "include": [
-    "./**/*"
+    "./**/*",
+    "../node_modules/@types/node/index.d.ts",
+    "../node_modules/@types/koa/index.d.ts"
   ]
 }
