--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-env": "^7.3.1",
     "@types/node": "^10.12.18",
-    "babel-loader": "^8.0.4",
+    "babel-loader": "^8.0.5",
     "babel-preset-latest": "^6.24.1",
-    "clean-webpack-plugin": "^1.0.0",
+    "clean-webpack-plugin": "^1.0.1",
     "css-loader": "^0.28.11",
     "drop-console-webpack-plugin": "^4.0.2",
     "file-loader": "^3.0.1",
@@ -46,35 +46,42 @@
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "purify-css": "^1.2.5",
     "purifycss-webpack": "^0.7.0",
-    "sass": "^1.15.2",
+    "sass": "^1.16.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
     "ts-node": "^7.0.1",
-    "typescript": "^3.2.2",
+    "typescript": "^3.2.4",
     "url-loader": "^1.1.2",
-    "vue": "^2.5.21",
-    "vue-loader": "^15.4.2",
+    "vue": "^2.5.22",
+    "vue-loader": "^15.6.1",
     "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.5.21",
-    "webpack": "^4.28.2",
-    "webpack-cli": "^3.1.2",
+    "vue-template-compiler": "^2.5.22",
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1",
     "webpack-dashboard": "^2.0.0",
     "webpack-dev-server": "^3.1.11",
     "webpack-jarvis": "^0.3.2",
-    "webpack-merge": "^4.1.3"
+    "webpack-merge": "^4.2.1"
   },
   "dependencies": {
     "@types/es6-promise": "^3.3.0",
+    "apollo-cache-inmemory": "^1.4.2",
+    "apollo-client": "^2.4.12",
+    "apollo-link": "^1.2.6",
+    "apollo-link-http": "^1.5.9",
     "axios": "^0.18.0",
     "clipboard": "^2.0.0",
-    "codemirror": "^5.38.0",
+    "codemirror": "^5.43.0",
     "countup": "^1.8.2",
     "cropperjs": "^1.2.2",
-    "dayjs": "^1.7.7",
+    "dayjs": "^1.8.0",
     "echarts": "^4.0.4",
     "glob": "^7.1.3",
+    "graphql": "^14.1.1",
+    "graphql-server-koa": "^1.4.0",
+    "graphql-tag": "^2.10.1",
     "html2canvas": "^1.0.0-alpha.12",
-    "iview": "^3.2.0",
+    "iview": "^3.2.2",
     "iview-area": "^1.5.17",
     "js-cookie": "^2.2.0",
     "koa": "^2.6.2",
@@ -86,20 +93,21 @@
     "koa2-cors": "^2.0.6",
     "koa2-history-api-fallback": "0.0.5",
     "localforage": "^1.7.3",
-    "mongodb": "^3.1.10",
-    "mongoose": "^5.4.2",
+    "mongodb": "^3.1.13",
+    "mongoose": "^5.4.6",
     "pomelo-logger": "^0.1.7",
     "qs": "^6.6.0",
     "register-service-worker": "^1.5.2",
     "simplemde": "^1.11.2",
-    "sortablejs": "^1.7.0",
+    "sortablejs": "^1.8.1",
+    "vue-apollo": "^3.0.0-beta.27",
     "vue-draggable-resizable": "^1.7.5",
     "vue-i18n": "^7.8.0",
     "vue-router": "^3.0.2",
-    "vue-server-renderer": "^2.5.21",
+    "vue-server-renderer": "^2.5.22",
     "vue-skeleton-webpack-plugin": "^1.2.2",
     "vuedraggable": "^2.16.0",
-    "vuex": "^3.0.1",
+    "vuex": "^3.1.0",
     "wangeditor": "^3.1.1",
     "xlsx": "^0.13.3"
   }
