--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "localforage": "^1.7.3",
     "mongodb": "^3.1.13",
     "mongoose": "^5.4.6",
+    "nodemailer": "^5.1.1",
     "pomelo-logger": "^0.1.7",
     "qs": "^6.6.0",
     "register-service-worker": "^1.5.2",
