server - [ adapter windows nodemon ]

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "cms-dev": "webpack-dev-server --hot --config cms/config/webpack.dev.js",
     "cms-build": "webpack --config cms/config/webpack.prod.js",
     "server-dev": "npm run server-build && node --inspect server/dist/index.js",
-    "server-dev-watch": "nodemon --watch 'server/**/*' -e ts,tsx --exec npm run server-dev",
+    "server-dev-watch": "nodemon --config server/nodemon.json",
     "server-build": "tsc -p server"
   },
   "repository": {
