--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "iview-area": "^1.5.17",
     "js-cookie": "^2.2.0",
     "koa": "^2.6.2",
+    "koa-bodyparser": "^4.2.1",
     "koa-compose": "^4.1.0",
     "koa-router": "^7.4.0",
     "koa-session2": "^2.2.8",
