--- a/mp/project.config.json
+++ b/mp/project.config.json
@@ -9,7 +9,7 @@
 	},
 	"compileType": "miniprogram",
 	"appid": "wxa3a9d68e040ea88c",
-	"projectname": "666",
+	"projectname": "inline-curriculum-vitae-mp",
 	"miniprogramRoot": "dist/",
 	"condition": {}
 }
