--- a/mp/package.json
+++ b/mp/package.json
@@ -1,41 +1,60 @@
 {
-  "name": "curriculum-vitae-inline",
-  "version": "0.0.2",
-  "description": "A WePY project",
-  "main": "dist/app.js",
+  "name": "inline-curriculum-vitae-mp",
+  "version": "1.0.0",
+  "private": true,
+  "description": "inline-curriculum-vitae-mp",
   "scripts": {
-    "dev": "wepy build --watch",
-    "build": "cross-env NODE_ENV=production wepy build --no-cache",
-    "dev:web": "wepy build --output web",
-    "clean": "find ./dist -maxdepth 1 -not -name 'project.config.json' -not -name 'dist' | xargs rm -rf",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build:weapp": "taro build --type weapp",
+    "build:swan": "taro build --type swan",
+    "build:alipay": "taro build --type alipay",
+    "build:tt": "taro build --type tt",
+    "build:h5": "taro build --type h5",
+    "build:rn": "taro build --type rn",
+    "dev:weapp": "npm run build:weapp -- --watch",
+    "dev:swan": "npm run build:swan -- --watch",
+    "dev:alipay": "npm run build:alipay -- --watch",
+    "dev:tt": "npm run build:tt -- --watch",
+    "dev:h5": "npm run build:h5 -- --watch",
+    "dev:rn": "npm run build:rn -- --watch"
   },
-  "wepy": {
-    "module-a": false,
-    "./src/components/list": "./src/components/wepy-list.wpy"
-  },
-  "author": "JesBrian <JesBrian666@gmail.com>",
+  "author": "",
   "license": "MIT",
   "dependencies": {
-    "redux": "^3.7.2",
-    "redux-actions": "^2.2.1",
-    "redux-promise": "^0.5.3",
-    "wepy": "^1.7.2",
-    "wepy-async-function": "^1.4.4",
-    "wepy-com-toast": "^1.0.2",
-    "wepy-redux": "^1.5.3",
-    "wepy-web": "^1.6.0"
+    "@tarojs/async-await": "1.2.12",
+    "@tarojs/components": "1.2.12",
+    "@tarojs/redux": "1.2.12",
+    "@tarojs/redux-h5": "1.2.12",
+    "@tarojs/router": "1.2.12",
+    "@tarojs/taro": "1.2.12",
+    "@tarojs/taro-alipay": "1.2.12",
+    "@tarojs/taro-h5": "1.2.12",
+    "@tarojs/taro-swan": "1.2.12",
+    "@tarojs/taro-tt": "1.2.12",
+    "@tarojs/taro-weapp": "1.2.12",
+    "nervjs": "^1.3.9",
+    "nerv-devtools": "^1.3.9",
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "babel-eslint": "^7.2.1",
+    "@types/react": "^16.4.8",
+    "@types/webpack-env": "^1.13.6",
+    "@tarojs/plugin-babel": "1.2.12",
+    "@tarojs/plugin-csso": "1.2.12",
+    "@tarojs/plugin-less": "1.2.12",
+    "@tarojs/plugin-uglifyjs": "1.2.12",
+    "@tarojs/webpack-runner": "1.2.12",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-export-extensions": "^6.22.0",
+    "babel-plugin-transform-jsx-stylesheet": "^0.6.5",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "cross-env": "^5.1.3",
-    "less": "^3.8.1",
-    "wepy-compiler-babel": "^1.5.1",
-    "wepy-compiler-less": "^1.3.10"
+    "babel-eslint": "^8.2.3",
+    "eslint": "^4.19.1",
+    "eslint-config-taro": "1.2.12",
+    "eslint-plugin-react": "^7.8.2",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-taro": "1.2.12"
   }
 }
