--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "codemirror": "^5.43.0",
     "countup": "^1.8.2",
     "cropperjs": "^1.2.2",
-    "dayjs": "^1.8.3",
+    "dayjs": "^1.8.4",
     "echarts": "^4.0.4",
     "glob": "^7.1.3",
     "graphql": "^14.1.1",
@@ -98,7 +98,7 @@
     "koa2-history-api-fallback": "0.0.5",
     "localforage": "^1.7.3",
     "mongodb": "^3.1.13",
-    "mongoose": "^5.4.9",
+    "mongoose": "^5.4.10",
     "nodemailer": "^5.1.1",
     "pomelo-logger": "^0.1.7",
     "qs": "^6.6.0",
@@ -108,6 +108,7 @@
     "vue-apollo": "^3.0.0-beta.28",
     "vue-draggable-resizable": "^1.7.5",
     "vue-i18n": "^7.8.0",
+    "vue-input-tag": "^2.0.4",
     "vue-router": "^3.0.2",
     "vue-server-renderer": "^2.6.2",
     "vue-skeleton-webpack-plugin": "^1.2.2",
