--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "drop-console-webpack-plugin": "^4.0.2",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "iview-loader": "^1.2.2",
     "less": "^3.9.0",
     "less-loader": "^4.0.5",
     "lint-staged": "^6.0.0",
