--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@types/koa": "^2.0.48",
     "@types/mongodb": "^3.1.19",
     "@types/mongoose": "^5.3.12",
-    "@types/node": "^10.12.24",
+    "@types/node": "^10.12.25",
     "babel-loader": "^8.0.4",
     "babel-preset-latest": "^6.24.1",
     "clean-webpack-plugin": "^1.0.0",
@@ -39,6 +39,7 @@
     "drop-console-webpack-plugin": "^4.0.2",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "iview-loader": "^1.2.2",
     "less": "^3.9.0",
     "less-loader": "^4.0.5",
     "lint-staged": "^6.0.0",
@@ -55,10 +56,10 @@
     "ts-node": "^7.0.1",
     "typescript": "^3.3.3",
     "url-loader": "^1.1.2",
-    "vue": "^2.6.5",
+    "vue": "^2.6.6",
     "vue-loader": "^15.6.2",
     "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.6.5",
+    "vue-template-compiler": "^2.6.6",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3",
     "webpack-dashboard": "^2.1.0",
@@ -104,12 +105,12 @@
     "qs": "^6.6.0",
     "register-service-worker": "^1.6.0",
     "simplemde": "^1.11.2",
-    "sortablejs": "^1.8.2",
+    "sortablejs": "^1.8.3",
     "vue-apollo": "^3.0.0-beta.28",
     "vue-draggable-resizable": "^1.7.5",
     "vue-i18n": "^7.8.0",
     "vue-router": "^3.0.2",
-    "vue-server-renderer": "^2.6.5",
+    "vue-server-renderer": "^2.6.6",
     "vue-skeleton-webpack-plugin": "^1.2.2",
     "vuedraggable": "^2.16.0",
     "vuex": "^3.1.0",
