--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
   },
   "homepage": "https://github.com/JesBrian/Curriculum-Vitae-Inline#readme",
   "devDependencies": {
-    "@babel/core": "^7.2.2",
+    "@babel/core": "^7.3.3",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.3.1",
     "@types/koa": "^2.0.48",
     "@types/mongodb": "^3.1.19",
-    "@types/mongoose": "^5.3.16",
+    "@types/mongoose": "^5.3.17",
     "@types/node": "^10.12.26",
     "babel-loader": "^8.0.4",
     "babel-preset-latest": "^6.24.1",
@@ -60,7 +60,7 @@
     "vue-loader": "^15.6.2",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.6",
-    "webpack": "^4.29.3",
+    "webpack": "^4.29.4",
     "webpack-cli": "^3.2.3",
     "webpack-dashboard": "^2.1.0",
     "webpack-dev-server": "^3.1.11",
@@ -99,7 +99,7 @@
     "koa2-history-api-fallback": "0.0.5",
     "localforage": "^1.7.3",
     "mongodb": "^3.1.13",
-    "mongoose": "^5.4.12",
+    "mongoose": "^5.4.13",
     "nodemailer": "^5.1.1",
     "pomelo-logger": "^0.1.7",
     "qs": "^6.6.0",
@@ -109,6 +109,7 @@
     "vue-apollo": "^3.0.0-beta.28",
     "vue-draggable-resizable": "^1.7.5",
     "vue-i18n": "^7.8.0",
+    "vue-json-tree-view": "^2.1.4",
     "vue-router": "^3.0.2",
     "vue-server-renderer": "^2.6.6",
     "vue-skeleton-webpack-plugin": "^1.2.2",
