--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "@babel/preset-env": "^7.3.1",
     "@types/koa": "^2.0.48",
     "@types/mongodb": "^3.1.19",
-    "@types/mongoose": "^5.3.18",
-    "@types/node": "^10.12.26",
+    "@types/mongoose": "^5.3.19",
+    "@types/node": "^10.12.27",
     "babel-loader": "^8.0.4",
     "babel-preset-latest": "^6.24.1",
     "clean-webpack-plugin": "^1.0.0",
@@ -50,20 +50,20 @@
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "purify-css": "^1.2.5",
     "purifycss-webpack": "^0.7.0",
-    "sass": "^1.17.0",
+    "sass": "^1.17.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
     "ts-node": "^7.0.1",
-    "typescript": "^3.3.3",
+    "typescript": "^3.3.3333",
     "url-loader": "^1.1.2",
-    "vue": "^2.6.6",
+    "vue": "^2.6.7",
     "vue-loader": "^15.6.4",
     "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.6.6",
+    "vue-template-compiler": "^2.6.7",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
     "webpack-dashboard": "^2.1.0",
-    "webpack-dev-server": "^3.2.0",
+    "webpack-dev-server": "^3.2.1",
     "webpack-jarvis": "^0.3.2",
     "webpack-merge": "^4.2.1"
   },
@@ -75,10 +75,10 @@
     "apollo-link-http": "^1.5.11",
     "axios": "^0.18.0",
     "clipboard": "^2.0.0",
-    "codemirror": "^5.43.0",
+    "codemirror": "^5.44.0",
     "countup": "^1.8.2",
     "cropperjs": "^1.2.2",
-    "dayjs": "^1.8.6",
+    "dayjs": "^1.8.8",
     "echarts": "^4.0.4",
     "glob": "^7.1.3",
     "graphql": "^14.1.1",
@@ -89,6 +89,7 @@
     "iview-area": "^1.5.17",
     "js-cookie": "^2.2.0",
     "koa": "^2.6.2",
+    "koa-body": "^4.0.8",
     "koa-bodyparser": "^4.2.1",
     "koa-compose": "^4.1.0",
     "koa-router": "^7.4.0",
@@ -99,7 +100,7 @@
     "koa2-history-api-fallback": "0.0.5",
     "localforage": "^1.7.3",
     "mongodb": "^3.1.13",
-    "mongoose": "^5.4.14",
+    "mongoose": "^5.4.15",
     "nodemailer": "^5.1.1",
     "pomelo-logger": "^0.1.7",
     "qs": "^6.6.0",
@@ -111,9 +112,9 @@
     "vue-i18n": "^7.8.0",
     "vue-json-tree-view": "^2.1.4",
     "vue-router": "^3.0.2",
-    "vue-server-renderer": "^2.6.6",
+    "vue-server-renderer": "^2.6.7",
     "vue-skeleton-webpack-plugin": "^1.2.2",
-    "vuedraggable": "^2.16.0",
+    "vuedraggable": "^2.18.0",
     "vuex": "^3.1.0",
     "wangeditor": "^3.1.1",
     "xlsx": "^0.13.3"
