--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "vue-router": "^3.0.2",
     "vue-server-renderer": "^2.6.9",
     "vue-skeleton-webpack-plugin": "^1.2.2",
+    "vue-waterfall-easy": "^2.4.3",
     "vuedraggable": "^2.19.2",
     "vuex": "^3.1.0",
     "wangeditor": "^3.1.1",
