config - [ import html2canvas & jspdf ]

--- a/package.json
+++ b/package.json
@@ -84,10 +84,11 @@
     "graphql": "^14.2.0",
     "graphql-server-koa": "^1.4.0",
     "graphql-tag": "^2.10.1",
-    "html2canvas": "^1.0.0-alpha.12",
+    "html2canvas": "^1.0.0-rc.1",
     "iview": "^3.3.3",
     "iview-area": "^1.5.17",
     "js-cookie": "^2.2.0",
+    "jspdf": "^1.5.3",
     "koa": "^2.7.0",
     "koa-body": "^4.1.0",
     "koa-bodyparser": "^4.2.1",
